- Made modal window prittier - Updated scrollbar - Fixed header

--- a/CarWash/wwwroot/src/main.css
+++ b/CarWash/wwwroot/src/main.css
@@ -4,7 +4,8 @@
 }
 header {
     width: 100%;
-    height: 12%;
+    height: 70px;
+    min-height: 70px;
     color: white;
     display: flex;
     flex-direction: row;
